# ExplicitlyDesktop

./: .gitignore  ADAPTIVE_MODEL_SWITCHING.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  TECHNOLOGY_SPECS.md  record_test.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
Models/: profanity_en.txt
Source/: ASRThread.cpp  ASRThread.h  AudioEngine.cpp  AudioEngine.h  AudioSourcePicker.cpp  AudioSourcePicker.h  CensorshipEngine.h  CircularBuffer.h  LockFreeQueue.h  LyricsAlignment.cpp  LyricsAlignment.h  Main.cpp  MainComponent.cpp  MainComponent.h  ProfanityFilter.h  QualityAnalyzer.cpp  QualityAnalyzer.h  SongRecognition.cpp  SongRecognition.h  TimestampRefiner.cpp  TimestampRefiner.h  Types.h  VocalFilter.cpp  VocalFilter.h  WebSocketServer.cpp  WebSocketServer.h  WhisperTest.cpp  WhisperThread.cpp  WhisperThread.h  WindowsMediaInfo.cpp  WindowsMediaInfo.h
